MHusaini - Adding a link to the demo video and fixing an error in the document browser. Adding auto overflow-y to the opinion summary table div.

--- a/obomeApp/public/stylesheets/opinionsBrowserPage.css
+++ b/obomeApp/public/stylesheets/opinionsBrowserPage.css
@@ -62,3 +62,7 @@ td {
 	width: 100%;
 	height: 100%;
 }
+
+#cntnrOpinionSummary {
+	overflow-y: auto;
+}
